chore: downgrade Java version to 17 and enhance alert notification system
- Update project to use JDK 17 instead of JDK 21 across pom.xml, README, and CI configuration.
- Introduce a new alert notification system with support for email and WeChat Work channels.
- Implement throttling for alert dispatching and configure routing based on alert severity.
- Add integration tests for the alert notification service.
- Update Dockerfile to reflect the Java version change.
- Modify existing tests to ensure compatibility with the new alert system.