@@ -23,6 +23,7 @@ import java.util.List;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -213,7 +214,7 @@ class UserAdminControllerWebTest {
         when(userMapper.selectById(5L)).thenReturn(existing);
 
         AssignRolesRequest req = new AssignRolesRequest();
-        req.setRoleIds(List.of(1L, null, 2L));
+        req.setRoleIds(java.util.Arrays.asList(1L, null, 2L));
 
         MockMvc mvc = mvc(userMapper, roleMapper, new BCryptPasswordEncoder(), txManager());
 
@@ -223,7 +224,7 @@ class UserAdminControllerWebTest {
                 .andExpect(status().isOk());
 
         verify(roleMapper).delete(any());
-        verify(roleMapper).insert(any());
+        verify(roleMapper, times(2)).insert(any());
     }
 
     private static MockMvc mvc(
